--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.18"
+    "mongoose": "^5.9.18",
+    "superagent": "^5.3.1"
   }
 }
